# ub_code

./: .gitignore  MANIFEST.in  PYPI_PUBLISHING.md  README.md  pyproject.toml  ub_camera_developer_guide.md
.github/workflows/: bump-version.yml
ub_camera/: __init__.py  _version.py
ub_camera/ssl/: ca.crt  ca.der.crt  ca.key
ub_utils/: __init__.py
